#ISS-73 upgrade room crud api (#24)
* update


* fixed #73

update room/prototype api
